--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="google-site-verification" content="4oswRpr051pzyKpWZwVNEmqdkrAJf4trbRpWRGsCkxg" />
 
   <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "NaturZen",
+  "url": "https://juanan8.github.io/NaturZen/",
+  "description": "NaturZen es un blog de salud y bienestar natural que ofrece remedios caseros, infusiones y productos recomendados para mejorar tu bienestar diario.",
+  "publisher": {
+    "@type": "Organization",
+    "name": "NaturZen",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80"
+    }
+  }
+}
+</script>
+
+<link rel="canonical" href="https://juanan8.github.io/NaturZen/" />
 </head>
 <body>
   <!-- Google Tag Manager (noscript) -->
@@ -66,7 +86,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          target="_blank"
          rel="noopener noreferrer"
          class="instagram-link">
-        <img src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new.png" alt="Instagram">
+        <img loading="lazy" src="https://img.icons8.com/ios-filled/30/ffffff/instagram-new.png" alt="Instagram">
       </a>
     </div>
 
@@ -94,19 +114,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <h3 class="subtitulo-recomendacion">🌙 Para dormir mejor</h3>
 
 <div class="producto">
-  <img src="https://images.unsplash.com/photo-1557735587-58e316c41219?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+  <img loading="lazy" src="https://images.unsplash.com/photo-1557735587-58e316c41219?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen relacionada">
   <p><strong>Infusión para dormir Yogi Tea</strong><br>Mezcla relajante con valeriana, melisa y manzanilla para un sueño reparador.</p>
   <a href="https://amzn.to/3Z9ZQuz" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 
   <div class="producto">
-    <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=400&q=80" alt="Difusor de aceites esenciales">
+    <img loading="lazy" src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=400&q=80" alt="Difusor de aceites esenciales">
     <p><strong>Difusor de aceites esenciales VicTsing</strong><br>Con luz LED y apagado automático para un ambiente relajante.</p>
     <a href="https://amzn.to/3SCEGBn" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
   </div>
 
   <div class="producto">
-    <img src="https://plus.unsplash.com/premium_photo-1688045685821-4958c1e28322?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1688045685821-4958c1e28322?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen relacionada">
     <p><strong>Spray de lavanda Calm Ease</strong><br>Aromaterapia para inducir la relajación antes de dormir.</p>
     <a href="https://amzn.to/42ZwDER" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
   </div>
@@ -115,19 +135,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h3 class="subtitulo-recomendacion">💪 Para fortalecer el sistema inmunológico</h3>
 
 <div class="producto">
-   <img src="https://plus.unsplash.com/premium_photo-1675364892892-b0aa1b79b67a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+   <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1675364892892-b0aa1b79b67a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen relacionada">
   <p><strong>Jengibre en polvo ecológico</strong><br>Potente antiinflamatorio natural para apoyar tus defensas.</p>
   <a href="https://amzn.to/4kdOv4o" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 
 <div class="producto">
-   <img src="https://images.unsplash.com/photo-1665473052284-164335672208?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+   <img loading="lazy" src="https://images.unsplash.com/photo-1665473052284-164335672208?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen relacionada">
   <p><strong>Miel cruda de romero</strong><br>Producto natural con propiedades antimicrobianas y energética.</p>
   <a href="https://amzn.to/4kiyEBF" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 
 <div class="producto">
-  <img src="https://images.unsplash.com/photo-1612120899319-dd0e3edfcf32?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+  <img loading="lazy" src="https://images.unsplash.com/photo-1612120899319-dd0e3edfcf32?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen relacionada">
   <p><strong>Extracto de equinácea</strong><br>Refuerza el sistema inmunológico con ingredientes naturales.</p>
   <a href="https://amzn.to/4kGbmpR" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
@@ -136,19 +156,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h3 class="subtitulo-recomendacion">☀️ Bienestar diario</h3>
 
 <div class="producto">
-  <img src="https://images.unsplash.com/photo-1596343621063-c7a7aaf37aa6?q=80&w=985&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+  <img loading="lazy" src="https://images.unsplash.com/photo-1596343621063-c7a7aaf37aa6?q=80&w=985&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen relacionada">
   <p><strong>Taza para infusiones con filtro</strong><br>Ideal para preparar tus infusiones favoritas de forma sencilla.</p>
   <a href="https://amzn.to/3Zf3aEn" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
 </div>
 
   <div class="producto">
-    <img src="https://images.unsplash.com/photo-1512820790803-83ca734da794?auto=format&fit=crop&w=400&q=80" alt="Libro Remedios Naturales">
+    <img loading="lazy" src="https://images.unsplash.com/photo-1512820790803-83ca734da794?auto=format&fit=crop&w=400&q=80" alt="Libro Remedios Naturales">
     <p><strong>Libro Remedios Naturales</strong><br>Guía práctica para tratamientos caseros y saludables.</p>
     <a href="https://amzn.to/4kezdfQ" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
   </div>
 
   <div class="producto">
-    <img src="https://images.unsplash.com/photo-1533038590840-1cde6e668a91?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+    <img loading="lazy" src="https://images.unsplash.com/photo-1533038590840-1cde6e668a91?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Imagen relacionada">
     <p><strong>Aceite esencial de eucalipto puro</strong><br>Para vapores o masajes relajantes.</p>
     <a href="https://amzn.to/4jTEbih" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
   </div>
