--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {
   "@context": "https://schema.org",
   "@type": "WebSite",
+  "@id": "https://juanan8.github.io/NaturZen/#website",
   "name": "NaturZen",
   "url": "https://juanan8.github.io/NaturZen/",
   "description": "NaturZen es un blog de salud y bienestar natural que ofrece remedios caseros, infusiones y productos recomendados para mejorar tu bienestar diario.",
@@ -53,6 +54,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@type": "ImageObject",
       "url": "https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80"
     }
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://juanan8.github.io/NaturZen/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
   }
 }
 </script>
@@ -93,14 +99,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </header>
 
-  <section id="inicio">
-    <h2>Remedios Naturales, Infusiones y Consejos para tu Bienestar Diario</h2>
-    <p>Tu espacio de bienestar natural y soluciones prácticas para el día a día</p>
-    <p>En un mundo cada vez más acelerado, cuidar de nuestra salud y bienestar se vuelve más importante que nunca. Por eso nace este blog: un lugar pensado para ofrecerte información clara, confiable y accesible sobre remedios caseros, consejos de salud natural y recomendaciones que pueden mejorar tu vida cotidiana.</p>
-    <p>Aquí encontrarás <a href="blog.html">artículos sobre salud natural</a> basados en conocimientos tradicionales y hábitos saludables, con enfoques naturales para aliviar molestias comunes, fortalecer el cuerpo y fomentar un estilo de vida más equilibrado. Desde recetas caseras para aliviar la tos, hasta infusiones que ayudan a conciliar el sueño, nuestro objetivo es acompañarte con soluciones sencillas y efectivas.</p>
-    <p>Además, en algunas publicaciones recomendamos productos que complementan los temas tratados, seleccionados cuidadosamente por su utilidad, calidad y buenas valoraciones. Queremos ayudarte a encontrar lo que necesitas de forma práctica y segura.</p>
-    <p>Te invitamos a explorar, aprender y disfrutar de este espacio hecho para ti. Bienvenido a Vida Natural y Recomendaciones: donde lo natural es lo esencial.</p>
-  </section>
+ <section id="inicio" class="inicio-natural">
+  <h2>Bienvenido a NaturZen</h2>
+  <p class="descripcion-principal">
+    Tu espacio de remedios naturales, infusiones y consejos para el bienestar diario.<br>
+    Sin artificios. Solo naturaleza y conocimiento útil.
+  </p>
+
+  <div class="pilares-naturzen">
+    <div class="pilar">
+      <h3>🌿 100% Natural</h3>
+      <p>Todo lo que compartimos nace de la sabiduría de la tierra: plantas, ingredientes caseros y tradición.</p>
+    </div>
+    <div class="pilar">
+      <h3>🧘 Bienestar Consciente</h3>
+      <p>Recupera el equilibrio entre cuerpo y mente con prácticas simples, sostenibles y respetuosas.</p>
+    </div>
+    <div class="pilar">
+      <h3>📘 Inspiración Diaria</h3>
+      <p>Artículos y consejos que te acompañan cada día en el camino hacia una vida más natural.</p>
+    </div>
+  </div>
+</section>
 
 <div style="text-align: center; margin-top: 2rem;">
   <a href="blog.html" class="boton-blog">Leer más en el blog</a>
