--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,37 @@
 </script>
 
 <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "AboutPage",
+  "name": "Sobre nosotros - NaturZen",
+  "url": "https://juanan8.github.io/NaturZen/sobre-nosotros.html",
+  "mainEntity": {
+    "@type": "Organization",
+    "name": "NaturZen",
+    "url": "https://juanan8.github.io/NaturZen/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80"
+    },
+    "description": "NaturZen es un blog de salud y bienestar natural creado por Juan Antonio y Luis, centrado en remedios caseros, infusiones y consejos naturales.",
+    "founders": [
+      {
+        "@type": "Person",
+        "name": "Juan Antonio",
+        "description": "Apasionado por la naturaleza y los remedios tradicionales, comparte sus conocimientos sobre bienestar natural."
+      },
+      {
+        "@type": "Person",
+        "name": "Luis",
+        "description": "Especialista en comunicación digital, ayuda a dar forma al proyecto y hacerlo accesible online."
+      }
+    ]
+  }
+}
+</script>
 </head>
 <body>
  <header>
